
ADD_LIBRARY ( PyIex ${LIB_TYPE}
	PyIex.cpp
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iexmodule MODULE
	iexmodule.cpp
)

IF ( ${PLATFORM_WINDOWS} )
	SET_TARGET_PROPERTIES ( iexmodule
		PROPERTIES PREFIX "" SUFFIX ".pyd" OUTPUT_NAME iex BUILD_WITH_INSTALL_RPATH ON
	)
ELSE ()
	SET_TARGET_PROPERTIES ( iexmodule
	PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
	)
ENDIF ()

TARGET_LINK_LIBRARIES ( iexmodule
	PyIex
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS iexmodule
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

